--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="left-side">
             <div class="profileText">
                 <div class="displayImage">
-                    <img src="/IMG-20230131-WA0225 - Copy" alt="">
+                    <img src="IMG-20230131-WA0225 - Copy.jpg" alt="" srcset="">
                 </div>
                 <h1>Tom-Alli Sheu Abolaji <br><span>Web Developer</span></h1>
             </div>
@@ -47,11 +47,11 @@
                         <h4>Started my FrontEnd Career</h4>
                         <h4>iSTEMLab Africa Innovations</h4>
                     </li>
-                    <li>
+                    <!-- <li>
                         <h5>2015-2021</h5>
                         <h4>Attened an Arabic school</h4>
                         <h4>Markaz-ul Nur'l Islam</h4>
-                    </li>
+                    </li> -->
                     <li>
                         <h5>2008-2014</h5>
                         <h4>Junior - Senior class</h4>
