chore:removing arabic lang. and modifying from career

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <li>
                         <h5>2022 </h5>
                         <h4>Started my FrontEnd Career</h4>
-                        <h4>iSTEMLab Africa Innovations</h4>
+                        <h4>ISTEMLab Africa Innovations</h4>
                     </li>
                     <!-- <li>
                         <h5>2015-2021</h5>
@@ -57,11 +57,11 @@
                         <h4>Junior - Senior class</h4>
                         <h4>Gbagada Comprehensive/Grammar School</h4>
                     </li>
-                    <li>
+                    <!-- <li>
                         <h5>1999-2007</h5>
                         <h4>Creche - Primary class</h4>
                         <h4>Al-Hudah Nursery and Primary School</h4>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
             <div class="contactInfo-languages">
@@ -80,12 +80,12 @@
                             <div style="width: 90%;"></div>
                         </span>
                     </li>
-                    <li>
+                    <!-- <li>
                         <span class="text">Arabic</span>
                         <span class="percent">
                             <div style="width: 50%;"></div>
                         </span>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
