--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-linkedin" aria-hidden="true"></i></span> 
-                        <span class="text">LinkedIn.com/sheutomalli</span>
+                        <span class="text">www.linkedin.com/in/
+                            tom-alli-sheu-062742247</span>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
