--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-linkedin" aria-hidden="true"></i></span> 
-                        <span class="text">www.linkedin.com/in/
-                            tom-alli-sheu-062742247</span>
+                        <span class="text"><a href="www.linkedin.com/in/tom-alli-sheu-062742247">LinkedIn</a></span>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
@@ -46,7 +45,7 @@
                     <li>
                         <h5>2022 </h5>
                         <h4>Started my FrontEnd Career</h4>
-                        <h4>ISTEMLab Africa Innovations</h4>
+                        <h4><a href="https://istemlabs.africa/">iSTEMLabsAfrica Limited</a></h4>
                     </li>
                     <!-- <li>
                         <h5>2015-2021</h5>
